Add better-sqlite3 dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "jspdf": "^2.5.1",
-    "csv-writer": "^1.6.0"
+    "csv-writer": "^1.6.0",
+    "better-sqlite3": "^12.2.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
