Run React and Electron together via start script

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A desktop application to manage personal invoices",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "react-start": "react-scripts start",
+    "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
+    "react-start": "BROWSER=none react-scripts start",
     "react-build": "react-scripts build",
     "electron-dev": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "clean": "node clean.js",
@@ -43,7 +43,9 @@
       "output": "dist"
     },
     "win": {
-      "target": ["portable"]
+      "target": [
+        "portable"
+      ]
     },
     "portable": {
       "artifactName": "PersonalInvoiceManager.exe"
