Run React and Electron together via npm start

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A desktop application to manage personal invoices",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "npm run electron-dev",
     "react-start": "cross-env BROWSER=none react-scripts start",
     "react-build": "react-scripts build",
     "electron-dev": "concurrently \"npm:react-start\" \"wait-on http://localhost:3000 && electron .\"",
